Refactor imports and enhance logging and error handling
Consolidate imports in UsePerson and refactor equals method in Person class. Add comprehensive logging and specific error handling in LazyStreams to manage exceptional cases. Introduce new CompanyEmployee class implementing multiple interfaces and update relevant test cases.